--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,4 +38,5 @@ workflows:
   # For more details on extending your workflow, see the configuration docs: https://circleci.com/docs/2.0/configuration-reference/#workflows
   dockertest: 
     jobs:
-      - build-and-test-push-container
+      - build-and-test-push-container:
+          context: DockerTest
