--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,9 @@ jobs:
       - run:
           name: Test
           command: mvn test
+      - run:
+          name: Package
+          command: mvn package
       - setup_remote_docker:
           docker_layer_caching: false
       - run:
