--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,8 +23,11 @@ jobs:
           name: Test
           command: mvn test
       - run:
-          name: Package and Build Docker Image
-          command: mvn package |
+          name: Package
+          command: mvn package
+      - run:
+          name: Build Docker Image
+          command: |
             docker build -t bendixon89/$IMAGE_NAME:0.1.${CIRCLE_BUILD_NUM} .
             echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
             docker push bendixon89/$IMAGE_NAME:0.1.${CIRCLE_BUILD_NUM}
