--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,10 @@ jobs:
       - run:
           name: Build
           command: mvn -B -DskipTests clean package
+      - persist_to_workspace:
+         root: ./
+         paths:
+           - target/
       # Then run your tests!
       - run:
           name: Test
@@ -25,6 +29,8 @@ jobs:
       - run:
           name: Package
           command: mvn package
+      - setup_remote_docker:
+          docker_layer_caching: false
       - run:
           name: Build Docker Image
           command: |
