--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,10 +18,6 @@ jobs:
       - run:
           name: Build
           command: mvn -B -DskipTests clean package
-      - persist_to_workspace:
-         root: ./
-         paths:
-           - target/
       # Then run your tests!
       - run:
           name: Test
@@ -29,14 +25,16 @@ jobs:
       - run:
           name: Package
           command: mvn package
-      - setup_remote_docker:
-          docker_layer_caching: false
-      - run:
-          name: Build Docker Image
-          command: |
-            docker build -t bendixon89/$IMAGE_NAME:0.1.${CIRCLE_BUILD_NUM} .
-            echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
-            docker push bendixon89/$IMAGE_NAME:0.1.${CIRCLE_BUILD_NUM}
+      - store_artifacts:
+          path: /bin/final_build
+      #- setup_remote_docker:
+      #    docker_layer_caching: false
+      #- run:
+      #    name: Build Docker Image
+      #    command: |
+      #      docker build -t bendixon89/$IMAGE_NAME:0.1.${CIRCLE_BUILD_NUM} .
+      #      echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
+      #      docker push bendixon89/$IMAGE_NAME:0.1.${CIRCLE_BUILD_NUM}
 
 workflows:
   # Below is the definition of your workflow.
