--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,14 +27,14 @@ jobs:
           command: mvn package
       - store_artifacts:
           path: /home/circleci/project/target
-      #- setup_remote_docker:
-      #    docker_layer_caching: false
-      #- run:
-      #    name: Build Docker Image
-      #    command: |
-      #      docker build -t bendixon89/$IMAGE_NAME:0.1.${CIRCLE_BUILD_NUM} .
-      #      echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
-      #      docker push bendixon89/$IMAGE_NAME:0.1.${CIRCLE_BUILD_NUM}
+      - setup_remote_docker:
+          docker_layer_caching: false
+      - run:
+          name: Build Docker Image
+          command: |
+            docker build -t bendixon89/$IMAGE_NAME:0.1.${CIRCLE_BUILD_NUM} .
+            echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
+            docker push bendixon89/$IMAGE_NAME:0.1.${CIRCLE_BUILD_NUM}
 
 workflows:
   # Below is the definition of your workflow.
