--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,5 +59,5 @@ workflows:
     jobs:
       - build-and-test:
           context: DockerTest
-      - dockemake:
+      - docker-make:
           context: DockerTest
