--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,28 +27,28 @@ jobs:
           command: mvn package
       - store_artifacts:
           path: /home/circleci/project/target
-      #- setup_remote_docker:
-      #    docker_layer_caching: false
-      #- run:
-      #    name: Build Docker Image
-      #    command: |
-      #      docker build -t bendixon89/$IMAGE_NAME:0.1.${CIRCLE_BUILD_NUM} .
-      #      echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
-      #      docker push bendixon89/$IMAGE_NAME:0.1.${CIRCLE_BUILD_NUM}
-  docker-make:
-    machine: true
-    steps:
-      - checkout
-      # start proprietary DB using private Docker image
-      # with credentials stored in the UI
-      - run: |
-          echo "$DOCKER_PWD" | docker login --username $DOCKER_LOGIN --password-stdin
+      - setup_remote_docker:
+          docker_layer_caching: false
+      - run:
+          name: Build Docker Image
+          command: |
+            docker build -t bendixon89/$IMAGE_NAME:0.1.${CIRCLE_BUILD_NUM} .
+            echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
+            docker push bendixon89/$IMAGE_NAME:0.1.${CIRCLE_BUILD_NUM}
+  #docker-make:
+  #  machine: true
+  #  steps:
+  #    - checkout
+  #    # start proprietary DB using private Docker image
+  #    # with credentials stored in the UI
+  #    - run: |
+  #        echo "$DOCKER_PWD" | docker login --username $DOCKER_LOGIN --password-stdin
 
-      # build the application image
-      - run: docker build -t bendixon89/$IMAGE_NAME:0.1.${CIRCLE_BUILD_NUM} .
+  #    # build the application image
+  #    - run: docker build -t bendixon89/$IMAGE_NAME:0.1.${CIRCLE_BUILD_NUM} .
 
-      # deploy the image
-      - run: docker push bendixon89/$IMAGE_NAME:0.1.${CIRCLE_BUILD_NUM}
+  #    # deploy the image
+  #    - run: docker push bendixon89/$IMAGE_NAME:0.1.${CIRCLE_BUILD_NUM}
 
 workflows:
   # Below is the definition of your workflow.
@@ -59,5 +59,5 @@ workflows:
     jobs:
       - build-and-test:
           context: DockerTest
-      - docker-make:
-          context: DockerTest
+     # - docker-make:
+     #     context: DockerTest
