--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,9 @@ jobs:
           command: mvn test
       - run:
           name: Package
-          command: mvn package
+          command: |
+            pwd
+            mvn package
       - store_artifacts:
           path: /home/circleci/project/target
       - setup_remote_docker:
@@ -32,7 +34,6 @@ jobs:
       - run:
           name: Build Docker Image
           command: |
-            cd home/circleci/project/target
             docker build -t bendixon89/$IMAGE_NAME:0.1.${CIRCLE_BUILD_NUM} --build-arg CI_BUILD_NUM=${CIRCLE_BUILD_NUM} .
             echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
             docker push bendixon89/$IMAGE_NAME:0.1.${CIRCLE_BUILD_NUM}
