--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
           command: |
             pwd
             mvn package
-            cd ./home/circleci/project/target
+            cd /home/circleci/project/
             dir
       #- store_artifacts:
       #    path: /home/circleci/project/target
