--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,27 +31,13 @@ jobs:
       - setup_remote_docker:
           docker_layer_caching: false
       - run:
-          name: Build Docker Image
+          name: Build Docker Image and Deplo to Docker Hub
           command: |
             cp /home/circleci/project/target/serving-web-content-complete-0.0.1-SNAPSHOT.jar .
             dir
             docker build -t bendixon89/$IMAGE_NAME:0.1.${CIRCLE_BUILD_NUM} .
             echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
             docker push bendixon89/$IMAGE_NAME:0.1.${CIRCLE_BUILD_NUM}
-  #docker-make:
-  #  machine: true
-  #  steps:
-  #    - checkout
-  #    # start proprietary DB using private Docker image
-  #    # with credentials stored in the UI
-  #    - run: |
-  #        echo "$DOCKER_PWD" | docker login --username $DOCKER_LOGIN --password-stdin
-
-  #    # build the application image
-  #    - run: docker build -t bendixon89/$IMAGE_NAME:0.1.${CIRCLE_BUILD_NUM} .
-
-  #    # deploy the image
-  #    - run: docker push bendixon89/$IMAGE_NAME:0.1.${CIRCLE_BUILD_NUM}
 
 workflows:
   # Below is the definition of your workflow.
@@ -62,5 +48,3 @@ workflows:
     jobs:
       - build-and-test:
           context: DockerTest
-     # - docker-make:
-     #     context: DockerTest
