--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,6 +53,7 @@ jobs:
           aws-secret-access-key: AWS_SECRET_ACCESS_KEY
       - aws-ecs/update-task-definition:
           container-image-name-updates: 'container=web-server-task,image-and-tag=bendixon89/$IMAGE_NAME:0.1.${CIRCLE_BUILD_NUM-1}'
+          family: 'first-run-task-definition'
 workflows:
   # Below is the definition of your workflow.
   # Inside the workflow, you provide the jobs you want to run, e.g this workflow runs the build-and-test job above.
