--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ orbs:
 
 jobs:
   # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
-  build-and-test:  
+  build-test-packageDocker-deployImage:
     # These next lines define a Docker executor: https://circleci.com/docs/2.0/executor-types/
     # You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # Be sure to update the Docker image tag below to openjdk version of your application.
@@ -35,7 +35,7 @@ jobs:
       - setup_remote_docker:
           docker_layer_caching: false
       - run:
-          name: Build Docker Image and Deplo to Docker Hub
+          name: Build Docker Image and Deploy to Docker Hub
           command: |
             cp /home/circleci/project/target/serving-web-content-complete-0.0.1-SNAPSHOT.jar .
             dir
@@ -43,17 +43,17 @@ jobs:
             echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
             docker push bendixon89/$IMAGE_NAME:0.1.${CIRCLE_BUILD_NUM}
             
-  update-task-definition:
-    docker:
-      - image: 'cimg/python:3.9.1'
-    steps:
-      - aws-cli/setup:
-          aws-access-key-id: AWS_SECRET_ACCESS_KEY_ID
-          aws-region: AWS_DEFAULT_REGION
-          aws-secret-access-key: AWS_SECRET_ACCESS_KEY
-      - aws-ecs/update-task-definition:
-          container-image-name-updates: 'container=web-server-task,image-and-tag=bendixon89/$IMAGE_NAME:0.1.${CIRCLE_PREVIOUS_BUILD_NUM}'
-          family: 'first-run-task-definition'
+  #update-task-definition:
+  #  docker:
+  #    - image: 'cimg/python:3.9.1'
+  #  steps:
+  #    - aws-cli/setup:
+  #        aws-access-key-id: AWS_SECRET_ACCESS_KEY_ID
+  #        aws-region: AWS_DEFAULT_REGION
+  #        aws-secret-access-key: AWS_SECRET_ACCESS_KEY
+  #    - aws-ecs/update-task-definition:
+  #        container-image-name-updates: 'container=web-server-task,image-and-tag=bendixon89/$IMAGE_NAME:0.1.${CIRCLE_PREVIOUS_BUILD_NUM}'
+  #        family: 'first-run-task-definition'
   
   update-tag:
     docker:
@@ -65,6 +65,7 @@ jobs:
           aws-secret-access-key: AWS_SECRET_ACCESS_KEY
       - aws-ecs/update-service:
           cluster-name: 'default'
+          container-image-name-updates: 'container=web-server-task,image-and-tag=bendixon89/$IMAGE_NAME:0.1.${CIRCLE_PREVIOUS_BUILD_NUM}'
           family: 'first-run-task-definition'
           service-name: 'web-server-task-service'
           
@@ -75,13 +76,13 @@ workflows:
   # For more details on extending your workflow, see the configuration docs: https://circleci.com/docs/2.0/configuration-reference/#workflows
   dockertest: 
     jobs:
-      - build-and-test:
+      - build-test-packageDocker-deployImage:
           context: DockerTest
-      - update-task-definition:
+      #- update-task-definition:
+      #    context: DockerTest
+      #    requires:
+      #      - build-and-test
+      - deploy-to-AWS:
           context: DockerTest
           requires:
-            - build-and-test
-      - update-tag:
-          context: DockerTest
-          requires:
-            - update-task-definition
+            - build-test-packageDocker-deployImage
